WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190249
[GTK][WPE] Incorrect rendering of layers whose backingStore hasn't changed
https://bugs.webkit.org/show_bug.cgi?id=190249
Summary
[GTK][WPE] Incorrect rendering of layers whose backingStore hasn't changed
Miguel Gomez
Reported
2018-10-03 07:58:42 PDT
CoordinatedGraphicsLayer::flushCompositingStateForThisLayerOnly() sets m_nicosia.performLayerSync to true when the layer properties have changed and the layer needs to be synced. But after that, CoordinatedGraphicsLayer::updateContentBuffers() sets that value to false if the layer has backingStore that doesn't need to me modified. This causes that the layer properties are not synced if the backingStore isn't modified as well.
Attachments
Patch
(1.82 KB, patch)
2018-10-03 08:03 PDT
,
Miguel Gomez
no flags
Details
Formatted Diff
Diff
Patch
(1.80 KB, patch)
2018-10-03 08:09 PDT
,
Miguel Gomez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Miguel Gomez
Comment 1
2018-10-03 08:03:40 PDT
Created
attachment 351519
[details]
Patch
Miguel Gomez
Comment 2
2018-10-03 08:09:50 PDT
Created
attachment 351520
[details]
Patch
WebKit Commit Bot
Comment 3
2018-10-03 08:48:01 PDT
Comment on
attachment 351520
[details]
Patch Clearing flags on attachment: 351520 Committed
r236794
: <
https://trac.webkit.org/changeset/236794
>
WebKit Commit Bot
Comment 4
2018-10-03 08:48:02 PDT
All reviewed patches have been landed. Closing bug.
Michael Catanzaro
Comment 5
2018-10-04 06:29:51 PDT
Is this the commit that might fix
bug #189743
? Should this be added to
https://trac.webkit.org/wiki/WebKitGTK/2.22.x
for backport to 2.22? The Nicosia code has changed dramatically since branching, so I'm not sure without investigation.
Adrian Perez
Comment 6
2018-10-04 07:28:20 PDT
(In reply to Michael Catanzaro from
comment #5
)
> Is this the commit that might fix
bug #189743
? > > Should this be added to
https://trac.webkit.org/wiki/WebKitGTK/2.22.x
for > backport to 2.22? The Nicosia code has changed dramatically since branching, > so I'm not sure without investigation.
Yesterday I was chatting with Žan about this and found it that if we also merge the patch for
bug #188693
beforehand, then this will apply cleanly on 2.22.x as well. And in that case we also will want the patch for
bug #189224
to avoid hitting a performance regression. Note that I did *NOT* get to the point of trying to run a build with them applied, and only checked what would be the minimum needed to get this merged, in case we wanted.
Michael Catanzaro
Comment 7
2018-10-04 07:42:28 PDT
Is the bug this fixes present on 2.22?
Miguel Gomez
Comment 8
2018-10-04 08:23:07 PDT
In which version is the youtube (In reply to Michael Catanzaro from
comment #7
)
> Is the bug this fixes present on 2.22?
This fixes a regression that was introduced by the fix to
bug #188693
, which I think is not in 2.22, so this won't fix anything in that release.
Michael Catanzaro
Comment 9
2018-10-04 08:34:51 PDT
Thanks Miguel. In that case, we surely don't need to backport this.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug