[GTK][WPE] Incorrect rendering of layers whose backingStore hasn't changed https://bugs.webkit.org/show_bug.cgi?id=190249

Reviewed by Žan Doberšek.

Do not overwrite m_nicosia.performLayerSync when updating the content buffers or we lose
the value calculated during the layer flush. Use an OR instead to keep the old value.

* platform/graphics/texmap/coordinated/CoordinatedGraphicsLayer.cpp:
(WebCore::CoordinatedGraphicsLayer::updateContentBuffers):


Canonical link: https://commits.webkit.org/205199@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236794 268f45cc-cd09-0410-ab3c-d52691b4dbfc